# batteryhob.github.io

./: .gitignore  404.html  CLAUDE.md  Dockerfile  Gemfile  MAINTENANCE.md  README.md  _config.yml  _config_development.yml  about.md  ads.txt  buildspec.yml  contact.md  docker-compose.yml  index.md  introduce.md  ourteam.md  privacy.md  robots.txt  services.md  sitemap.xml  tags.md
_data/: i18n.yml
_drafts/: 2021-04-16-DockerForAnalysis-전지호.md  2021-04-16-MLOpsFirst-전지호.md  2021-05-17-DynamoDB-전지호.md  2021-06-09-ArgoCD-전지호.md  2021-06-09-GpuNotebook-전지호.md
_includes/: author.html  breadcrumb.html  footer.html  head.html  header.html  hreflang.html  icon-nexon.html  main_banner.html  mathjax_support.html  ourteam.html  structured_data.html  tag_link.html  tags.html
_layouts/: default.html  home.html  page.html  post.html
_posts/: 2021-05-16-MLOpsPrologue-전지호.md  2021-05-28-JupyterhubConfig-전지호.md  2021-05-28-JupyterhubForK8S-전지호.md  2021-06-03-MysqlEvent-전지호.md  2021-06-04-ApacheZeppelinVsJupyter-전지호.md  2021-06-04-S3Lifecycle-전지호.md  2021-06-09-ArgoCD-전지호.md  (+27 more)
en/: about.md  (+4 more)
krim/: README.md  pyproject.toml  test_deep_verify.py
krim/examples/.krim/: KRIM.md  config.json
krim/examples/.krim/rules/: no-secrets.md
krim/examples/.krim/skills/deploy/: SKILL.md
krim/krim/: __init__.py  __main__.py  agent.py  compaction.py  config.py  context.py  git.py  mcp.py  prompt.py  retry.py  safety.py  skills.py  truncate.py  ui.py
krim/krim/models/: __init__.py  base.py  claude.py  openai.py
krim/krim/tools/: __init__.py  base.py  bash.py  edit.py  read.py  write.py
(+13 files in other folders)
