[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "krim"
version = "0.1.0"
description = "Thin CLI agent. Trust the model, keep the harness light."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
]

[project.scripts]
krim = "krim.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
